Still V 1.8: Added CMU logo. Set filtering min. window size to 3.

--- a/Distance_Monitor_US100/data/index_header.html
+++ b/Distance_Monitor_US100/data/index_header.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
 <title>CMU Physics Lab Data Logger</title>
 <script src="./jquery-3.7.0.min.js"></script>
 <!--<script src="chart.min.js"></script>-->
-<script src="Chart.bundle.min.js"></script>
+<script src="./Chart.bundle.min.js"></script>
 
 <script>
 
@@ -68,6 +69,17 @@
 
  });  
 </script>
+
+<style>
+
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+</style>
+
+
 </head>
 <body>
+<image src="Combo_horz_maroongold.png" width="300">
 <h2>CMU Physics Lab Data Logger</h2>
