--- a/Distance_Monitor_US100/data/index_header.html
+++ b/Distance_Monitor_US100/data/index_header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>CMU Physics Lab Data Logger</title>
 <script src="./jquery-3.7.0.min.js"></script>
 <!--<script src="chart.min.js"></script>-->
@@ -65,8 +65,8 @@
         
         $('#run').click(function() {
             $(this).css('color','red');
+            $('#spinner').css('visibility', 'visible');
         });
-
  });  
 </script>
 
@@ -76,10 +76,68 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr {
+  background-color: #e5e5e5;
+}
+
+input[type=submit], input[type=button] {
+  background-color: #d5d5d5;
+  border: 1;
+  color: black;
+  padding: 9px 9px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  -webkit-border-radius: .5em; 
+  -moz-border-radius: .5em;
+  border-radius: .5em;
+}
+
+#spinner {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  display: block;
+    position: absolute;
+    top: 40%;
+    margin-top: -4.05em;
+    left: 50%;
+    margin-left: -60px;
+    visibility: hidden;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 </style>
 
 
 </head>
 <body>
+<div id="spinner"></div>
+
 <image src="Combo_horz_maroongold.png" width="300">
 <h2>CMU Physics Lab Data Logger</h2>
