V 1.10  Many more HTML/CSS fixes. Web code now validates at https://validator.w3.org

--- a/Distance_Monitor_US100/data/index_header.html
+++ b/Distance_Monitor_US100/data/index_header.html
@@ -89,8 +89,6 @@ tr {
 
 input[type=submit], input[type=button] {
   background-color: #d5d5d5;
-  border: 1;
-  color: black;
   padding: 9px 9px;
   text-align: center;
   text-decoration: none;
@@ -139,5 +137,5 @@ input[type=submit], input[type=button] {
 <body>
 <div id="spinner"></div>
 
-<image src="Combo_horz_maroongold.png" width="300">
+<img src="Combo_horz_maroongold.png" width="300" alt="CMU Logo">
 <h2>CMU Physics Lab Data Logger</h2>
